hdone/objects/Schedule_Connection__c.object
<CustomObject>
    <description>Develops connection between locations that will have a schedule and the schedule development to enable many to many relationships for locations that should have a schedule.</description>
    <fields>
        <fullName>Address_Type__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Lookup to address for scheduling information</description>
        <inlineHelpText>Lookup to address for scheduling information</inlineHelpText>
        <label>Address Type</label>
        <referenceTo>Address_Type__c</referenceTo>
        <relationshipLabel>Schedule Connections</relationshipLabel>
        <relationshipName>Schedule_Connections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AuditSetting__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>AuditSetting</label>
        <referenceTo>AuditSetting__c</referenceTo>
        <relationshipLabel>Schedule Connections</relationshipLabel>
        <relationshipName>Schedule_Connections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <description>Ending date for schedule creation. If not populated will use end of month</description>
        <inlineHelpText>Ending date for schedule creation. If not populated will use end of month</inlineHelpText>
        <label>EndDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <description>Product Name</description>
        <inlineHelpText>Product Name</inlineHelpText>
        <label>Product Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Product_Name</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Provider__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Lookup to Provider (Contact)</description>
        <inlineHelpText>Provider</inlineHelpText>
        <label>Provider</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Schedule Connections</relationshipLabel>
        <relationshipName>Schedule_Connections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Scenario__c</fullName>
        <description>Scenario to create</description>
        <inlineHelpText>Scenario to create</inlineHelpText>
        <label>Scenario</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Complaint</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Schedule_Count__c</fullName>
        <description>Count of number of schedules to create for Connection</description>
        <label>Schedule Count</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Schedule_Development__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Lookup to schedule development</description>
        <inlineHelpText>Select type of schedule to create by clicking the appropriate Schedule Development name.</inlineHelpText>
        <label>Schedule Development</label>
        <referenceTo>Schedule_Development__c</referenceTo>
        <relationshipLabel>Schedule Connections</relationshipLabel>
        <relationshipName>Schedule_Connections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SourceOrg__c</fullName>
        <description>Identifies which is source org for record. If record is shared FROM customer to HealthDetail then Customer else if shared other way HealthDetail. Was using formula fields but getting relationship errors.</description>
        <inlineHelpText>Identifies which is source org for record Customer or HealthDetail</inlineHelpText>
        <label>SourceOrg</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>HealthDetail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <description>Starting Date for schedule creation. Used in Apex class</description>
        <inlineHelpText>Starting Date for schedule creation.</inlineHelpText>
        <label>StartDate</label>
        <type>Date</type>
    </fields>
    <label>Schedule Connection</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SCHCONN-{000000}</displayFormat>
        <label>Schedule Connection Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Schedule Connections</pluralLabel>
    <recordTypes>
        <fullName>MemberOne_Address</fullName>
        <active>true</active>
        <description>Connections used for MemberOne Addresses</description>
        <label>MemberOne Address</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>